Sub indices changes with regex + re-index ha
Find: (ha|p|m|d|y)(\d+)

Replace: $1<sub>$2</sub>

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ tablesolutiongrasp.html
 tablasolutionlabelling.html
 tabla2.html
 Tables_old.html
+modified_text.txt
+OldTables15032023.html
+reconstrucTable.py
